<resources>
    <string name="txterr">This data is required</string>
    <string name="rdoerr">This data is required</string>
    <string name="app_name">Mid-term assessment of AMAN Community Health Program</string>
    <string name="section_A">  گھر کی شناخت </string>
    <string name="delivery">Delivery</string>
    <string name="postPartumCare">زچگی کے بعد کی نگھداشت</string>
    <string name="childMorbidity">بچے کی بیماریاں اور ان کا علاج</string>
    <string name="dob">تاریخ پیدائش</string>
    <string name="age">عمر</string>
    <string name="months">ماہ</string>
    <string name="days">دن</string>
    <string name="weeks">ہفتے</string>
    <string name="sex">جنس</string>
    <string name="male">مرد</string>
    <string name="female">عورت</string>
    <string name="yes">ہاں</string>
    <string name="no">نہیں</string>
    <string name="dnk">معلوم نہیں</string>
    <string name="none">کوئی نہیں</string>
    <string name="year">سال</string>
    <string name="month">مہینے</string>
    <string name="other">کوئی اور (وضاحت کریں)۔</string>
    <string name="na">قابل اطلاق نہیں</string>
    <string name="end_interview"> اختتام </string>
    <string name="start_interview"> انٹرویو شروع کریں </string>
    <string name="next_section">اگلا سیکشن</string>
    <string name="endForm">اختتام</string>
    <string name="digits">1234567890.,+=-qwertyuiopasdfghjklzxcvbnm ?%#@!&amp;QWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="occupation01"> ڈاکٹر، انجینیئر، اکائونٹنٹ، مینیجر </string>
    <string name="occupation02">کلرک  </string>
    <string name="occupation03"> سیلزمین </string>
    <string name="occupation04"> تربیت یافتہ مزدور </string>
    <string name="occupation05"> غیر تربیت یافتہ مزدور </string>
    <string name="occupation06"> زمین کی ملکیت کے بغیر کاشتکار </string>
    <string name="occupation07"> زمیندار </string>
    <string name="occupation08"> کاروبار </string>
    <string name="occupation09"> دکان </string>
    <string name="occupation10"> بے روزگار </string>
    <string name="occupation11"> ریٹائرڈ </string>
    <string name="occupation12"> گھریلو خاتون </string>
    <string name="mnfrmno"> ڈی ایم یو سیریل نمبر </string>
    <string name="mnsid"> تحقیقی شناخت نمبر </string>
    <string name="formDateTime"> دورے کی تاریخ </string>
    <string name="bi2"> انٹرویو کرنے والے کا نام </string>
    <string name="bi2nm"> انٹرویو کرنے والے کا نام </string>
    <string name="bi3"> فیلڈ سائیٹ/ضلع </string>
    <string name="bi4"> پی ایس یو نمبر اور نام </string>
    <string name="bi5"> گھرانے کا نمبر </string>
    <string name="bi5_ext"> خاندان نمبر </string>
    <string name="AmanInfo">اے- بنیادی اور شناختی معلومات  </string>
    <string name="biuc">یونین کاؤنسل کا نام </string>
    <string name="biPara">پاڑہ کا نام </string>
    <string name="biACHW">اے سی ایچ ڈبلیو کا نام </string>
    <string name="biHH">گھر کا نمبر </string>
    <string name="bi01">زبانی رضامندی </string>
    <string name="bi0101">  جوابدہندہ انٹرویو دینے کے لئے رضامند ہوئی </string>
    <string name="bi0102">جوابدہندہ انٹرویو دینے کے لئے رضامند نہیں ہوئی  </string>
    <string name="bib01">جواب دہندہ کا نام </string>
    <string name="bib04">تعلیم </string>
    <string name="edu01">غیر تعلیم یافتہ </string>
    <string name="edu02">صرف قرآن کی تعلیم </string>
    <string name="edu03">پرائمری اسکول (5-1) </string>
    <string name="edu04">سیکنڈری اسکول (10-6)</string>
    <string name="edu05">ہائی اسکول (12-11) </string>
    <string name="edu06">بیچلرز </string>
    <string name="edu07">ماسٹرز </string>
    <string name="edu08">پی ۔ ایچ ۔ ڈی</string>
    <string name="edu09">ٹیکنیکل ایجوکیشن</string>
    <string name="bib05">پیشہ </string>
    <string name="bib06">شوہر کا نام </string>
    <string name="bib07">جنس</string>
    <string name="bib08">عمر</string>
    <string name="bib09">تعلیم</string>
    <string name="bib10">پیشہ</string>
    <string name="bib11">  گھر کے سربراہ کا نام</string>
    <string name="bib12">جنس</string>
    <string name="bib13">عمر</string>
    <string name="bib14">تعلیم</string>
    <string name="bib15">پیشہ</string>
    <string name="bib16">آپ اس علاقے میں کب سے رہ رہے ہیں؟ </string>
    <string name="bic01">گھر کے تمام افراد کی تعداد </string>
    <string name="bic04">15 سے 49 سال کی عورتیں</string>
    <string name="bic05">5سال سے کم عمر بچے</string>
    <string name="mna2"> انٹرویو کرنے والے کا نام </string>
    <string name="mna2nm"> انٹرویو کرنے والے کا نام </string>
    <string name="mna3"> فیلڈ سائیٹ/ضلع </string>
    <string name="mna4"> پی ایس یو نمبر اور نام </string>
    <string name="mna5"> گھرانے کا نمبر </string>
    <string name="mna5_ext"> خاندان نمبر </string>
    <string name="childName"> منتخب بچے کا نام (لائن لسٹنگ کے مطابق) </string>
    <string name="iStatus"> انٹرویو کی نوعیت</string>
    <string name="mna7a"> مکمل </string>
    <string name="mna7b">جزوی طور پر مکمل </string>
    <string name="mna7c">انکار کردیا </string>
    <string name="mna7d">واب دہندہ گھر پر موجود نہیں </string>
    <string name="mna7e">ملتوی </string>
    <string name="mna7f"> گزشتہ دو سالوں کے دوران کوئی  حمل نہیں </string>
    <string name="mna8"> گھر کے سربراہ کا نام </string>
    <string name="mna9"> جواب دینے والے کا نام </string>
    <string name="mna10"> جواب دینے والے کا منتخب بچے سے رشتہ </string>
    <string name="mna10a"> ماں </string>
    <string name="mna10b"> والد </string>
    <string name="mna10c"> بہن </string>
    <string name="mna10d"> بھائی </string>
    <string name="mna10e"> دادا/دادی/نانا/نانی </string>
    <string name="mna11"> جواب دینے والے کی عمر سالوں میں </string>
    <string name="mna12"> جواب دینے والے کی تعلیمی قابلیت </string>
    <string name="mna12a"> Illiterate ان پڑھ/ناخواندہ </string>
    <string name="mna12b"> Primary بنیادی/پرائمری </string>
    <string name="mna12c"> SSC دسویں  </string>
    <string name="mna12d"> HSC بارھویں </string>
    <string name="mna12e"> Graduation چودھویں </string>
    <string name="mna12f"> Masters سولہویں </string>
    <string name="mna12g"> Religious Education دینی تعلیم </string>
    <string name="mna13"> پانچ سال سے کم عمر بچوں کی تعداد (بشمول منتخب بچےکے) </string>
    <string name="bi8"> گھر کے سربراہ کا نام </string>
    <string name="bi9"> جواب دینے والے کا نام </string>
    <string name="bi10"> جواب دینے والے کا منتخب بچے سے رشتہ </string>
    <string name="bi10a"> ماں </string>
    <string name="bi10b"> والد </string>
    <string name="bi10c"> بہن </string>
    <string name="bi10d"> بھائی </string>
    <string name="bi10e"> دادا/دادی/نانا/نانی </string>
    <string name="bi11"> جواب دینے والے کی عمر سالوں میں </string>
    <string name="bi12"> جواب دینے والے کی تعلیمی قابلیت </string>
    <string name="bi12a"> Illiterate ان پڑھ/ناخواندہ </string>
    <string name="bi12b"> Primary بنیادی/پرائمری </string>
    <string name="bi12c"> SSC دسویں  </string>
    <string name="bi12d"> HSC بارھویں </string>
    <string name="bi12e"> Graduation چودھویں </string>
    <string name="bi12f"> Masters سولہویں </string>
    <string name="bi12g"> Religious Education دینی تعلیم </string>
    <string name="bi13"> پانچ سال سے کم عمر بچوں کی تعداد (بشمول منتخب بچےکے) </string>
    <string name="section_B"> منتخب بچے کی تفصیلات</string>
    <string name="mnb1"> بچے کا نام </string>
    <string name="mnb2"> والد کا نام/ولدیت </string>
    <string name="mnb3"> ماں کا نام </string>
    <string name="mnb4"> ماں یا باپ کا شناختی کارڈ نمبر </string>
    <string name="mnb4x96"> شناختی کارڈ موجود نہِیں </string>
    <string name="mnb5"> تاریخ پیدائش </string>
    <string name="mnb6">  بچے کی عمر </string>
    <string name="mnb6mm"> بچے کی عمر (ماہ) </string>
    <string name="mnb6yy"> بچے کی عمر (دن) </string>
    <string name="mnb7"> بچے کی جنس </string>
    <string name="section_C">Growth Monitoring / Vaccination</string>
    <string name="section_C1">معمول کے ٹیکے</string>
    <string name="section_C2">اضافی ٹیکے</string>
    <string name="section_C3">سفر کی غرز سے ٹیکے</string>
    <string name="mnc1"> کیا کبھی بھی (بچے کا نام) کو حفاظتی ٹیکے لگائے گئے؟ </string>
    <string name="mnc2"> کیا (بچے کا نام) کے پاس حفاظتی ٹیکوں کا کارڈ موجود ہے جس میں حفاظتی ٹیکہ جات کا اندراج موجود ہے؟ </string>
    <string name="mnc3"> اگر ہاں تو کیا میں وہ دیکھ سکتا/سکتی ہوں؟ </string>
    <string name="mnc3a"> موجود ہے اور دیکھاہے </string>
    <string name="mnc3b"> اگر ہاں تو کیا میں وہ دیکھ سکتا/سکتی ہوں؟ </string>
    <string name="mnc4"> اگر نہیں تو کیا (بچے کا نام) کو کبھی ٹیکوں والا کارڈ تھا؟ </string>
    <string name="mnc5"> اگر ٹیکے لگائے گئے ہیں تو معلومات لکھیں۔ </string>
    <string name="mnc5_0"> پیدائش کے وقت </string>
    <string name="mnc5bcg"> BCG </string>
    <string name="mnc5opv0"> OPV0 </string>
    <string name="mnc5_1"> چھ ہفتے کی عمر میں </string>
    <string name="mnc5p1"> Penta1 </string>
    <string name="mnc5pcv1"> PCV1 </string>
    <string name="mnc5opv1"> OPV1 </string>
    <string name="mnc5_2"> دس ہفتے کی عمر میں </string>
    <string name="mnc5p2">  Penta2 </string>
    <string name="mnc5pcv2"> PCV2 </string>
    <string name="mnc5opv2"> OPV2 </string>
    <string name="mnc5_3"> چودہ ہفتے کی عمر میں </string>
    <string name="mnc5p3"> Penta3 </string>
    <string name="mnc5pcv3"> PCV3 </string>
    <string name="mnc5opv3"> OPV3 </string>
    <string name="mnc5ipv1"> IPV </string>
    <string name="pc01">کیا گزشتہ زچگی کے بعد آپ کو کوئی پیچیدگی پیش آئی تھی؟</string>
    <string name="pc02">اگر ہاں تو آپ کو ان میں سے کونسی پیچیدگیاں پیش آئی تھیں؟ </string>
    <string name="pc02a">بہت زیادہ خون آنا</string>
    <string name="pc02b">پیٹ کے نچلے حصے میں شدید درد</string>
    <string name="pc02c">جھٹکے/دورے </string>
    <string name="pc02d">سو سے زیادہ بخار</string>
    <string name="pc02e">دھندلاپن</string>
    <string name="pc03">اگر ہاں تو کیا آپ نے ان علامات کے لئے علاج کروایا تھا؟</string>
    <string name="pc04">اگر نہیں تو علاج نہ کروانے کی وجوہات بتائیں؟</string>
    <string name="pc05">اگر ہاں تو آپ نے اپنا  معائنہ کہاں سے کروایا تھا؟</string>
    <string name="pc05a">گورنمنٹ کے مرکز صحت میں</string>
    <string name="pc05b">پرائیوٹ مرکز صحت</string>
    <string name="pc05c">ایل ایچ وی/مڈوائف کے گھر آنا/جانا</string>
    <string name="pc05d">ایل ایچ وی کے گھر آنا /جانا</string>
    <string name="pc05e">دائی/ٹی بی اے  </string>
    <string name="pc06">زچگی کے کتنے دن یا ہفتے بعد آپ نے اپنا پہلا معائنہ کروایا تھا ؟ اگر اسی دن ہی معائنہ کروایا ہے تو 00 لکھ دیں۔</string>
    <string name="pc0699">آج تک کوئی معائنہ نہیں کروایا۔</string>
    <string name="pc07">کیا بچے کی پیدائش کے بعدآپ کو درجہ ذیل میں سے کوئی مشورہ دیا گیا تھا؟ </string>
    <string name="pc07a">بچوں میں وقفہ</string>
    <string name="pc07b">صرف اور صرف ماں کا دودھ پلانا</string>
    <string name="pc07c">بچوں کے ٹیکے</string>
    <string name="pc07d">بچوں کے دست</string>
    <string name="pc07e">نمونیہ کی علامات</string>
    <string name="pc08">کیا آپ کو زچگی کے 40 دن بعد کوئی پیچیدگی پیش آئی تھی؟</string>
    <string name="pc09">اگر ہاں تو آپ کو کیا ہوا تھا؟</string>
    <string name="pc09a">بہت زیادہ خون آنا </string>
    <string name="pc09b">پیٹ کے نچلے صحے میں درد</string>
    <string name="pc09c">جھٹکے/دورے </string>
    <string name="pc09d">سو سے زیادہ بخار</string>
    <string name="pc09e">دھندلاپن </string>
    <string name="pc09f">چھاتی کا کھچاؤ</string>
    <string name="pc09g">مایوسی </string>
    <string name="pc09h">نیام سے پانی کا اخراج </string>
    <string name="pc10">کیا آپ نے ان پیچیدگیوں کے لئے اپنا علاج کروایا تھا؟</string>
    <string name="pc11">اگر نہیں تو علاج نہ کروانے کی وجوہات بتائیے؟</string>
    <string name="pc12">اگر ہاں تو آپ نے کہاں سے علاج کروایا تھا؟</string>
    <string name="pc12a">گورنمنٹ کے مرکز صحت میں</string>
    <string name="pc12b">پرائیوٹ مرکز صحت</string>
    <string name="pc12c">ایل ایچ وی/مڈوائف کے گھر آنا/جانا</string>
    <string name="pc12d">ایل ایچ وی کے گھر آنا /جانا</string>
    <string name="pc12e">دائی/ٹی بی اے  </string>
</resources>